--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,20 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --bg-image: url("../images/cover-image-dark.png");
+  --accent-color: #ff0070;
+  --accent-color-opacity: #ff007066;
+  --text-color: #f1b2ce;
+  --decoration-color: var(--accent-color);
+  --bg-color: #000028;
+  --header1-color: #db00ff;
+  --header2-color: var(--accent-color);
+  --header3-color: var(--background-color);
+  --font-family: 'IBM Plex mono', monospace;
+  --main-font-size: 18px;
+  --small-line-height: 82.5%;
+  --main-line-height: 100%;
+  --large-line-height: 130%;
+  --bold-font-weight: 800;
+  --main-font-weight: 400;
+  --font-style: normal;
+  --is-light: visible;
+}
