--- a/styles/style.css
+++ b/styles/style.css
@@ -2,21 +2,21 @@
 
 .page {
   font-family: var(--font-family);
-  background-color: var(--background-color);
+  background-color: var(--bg-color);
 }
 
 .header {
   display: grid;
-  grid-template-columns: 1fr min-content 1fr;
+  grid-template-rows: 1fr min-content 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-flow: column;
   align-items: center;
-  justify-items: end;
-  padding: 13px;
-}
-
-.decorated-zone {
   height: 100vh;
-  min-height: 668px;
-  position: relative;
+  padding: 13px;
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .decorated-zone::before {
@@ -42,34 +42,39 @@
 }
 
 .rec {
+  display: grid;
+  align-self: flex-start;
+  grid-template-columns: repeat(2, auto);
+  justify-self: end;
+  justify-self: end;
   position: absolute;
-  visibility: var(--visible);
-  color: var(--button-color);
+  visibility: var(--is-light); 
+  gap: 10px;
+  block-size: 25px; 
+  color: var(--accent-color);
+  font-size: var(--regular-font-size);
   text-transform: uppercase;
-  inset-block-start: var(--main-padding);
-  inset-inline-end: calc(var(--main-padding) + 3px + 25px);
+  line-height: 25px;
 }
 
 .rec::after {
   content: "";
-  position: absolute;
-  block-size: 5px;
-  inline-size: 5px;
+  align-self: center;
+  inline-size: 9px;
+  block-size: 9px;
+  margin-inline-end: 9px;
+  background-color: var(--accent-color);
   border-radius: 50%;
-  box-shadow: 0px 0px 4px 4px var(--button-color);
-  color: var(--button-color);
-  background-color: var(--button-color);
-  inset-inline-end: -18px;
-  inset-block-start: 9px;
+  filter: drop-shadow(0px 0px 4px var(--accent-color));
 }
 
 .header__theme-menu {
   justify-self: end;
+  grid-column: 1 / 3;
 }
 
 .header__theme-menu-list {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 13px;
 }
 
@@ -105,18 +110,21 @@
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--nav-color);
+  border: 1px solid var(--decoration-color);
   pointer-events: none;
 }
 
 .header__title {
+  grid-column: 1 / 3;
   justify-self: start;
-  line-height: 0.825;
-  color: var(--header-title-color);
-  font-size: var(--header-title-size);
+  color: var(--header1-color);
   text-shadow: 4px 4px 0 var(--accent-color);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: var(--small-line-height);
 }
 
 .header__description {
-  font-weight: bold;
+  grid-column: 1 / 3;
+  justify-content: end;
+  display: inline-block;
 }
