--- a/styles/style.css
+++ b/styles/style.css
@@ -91,24 +91,6 @@
   text-transform: lowercase;
 }
 
-.header__theme-menu-button:focus {
-  outline: none;
-}
-
-.header__theme-menu-button:focus-visible::after {
-  content: "";
-  position: absolute;
-  inline-size: 100%;
-  block-size: 1px;
-  background-color: var(--nav-color);
-  inset-inline-start: 0;
-  inset-block-end: -2px;
-}
-
-.header__theme-menu-button:hover {
-  --nav-hover-color: rgb (255 0 112 / 0.4);
-}
-
 .header__theme-menu-button_active {
   border: 1px solid var(--decoration-color);
   pointer-events: none;
@@ -128,3 +110,66 @@
   justify-content: end;
   display: inline-block;
 }
+
+.main {
+  margin-block: 40px;
+  padding-inline: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: column;
+  row-gap: 50px;
+}
+
+.content-section {
+  display: grid;
+  grid-column: 1 / 4;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.section-title {
+  grid-column: 1 / 4;
+  color: var(--header2-color);
+  font-size: var(--main-font-size);
+  font-weight: var(--bold-font-weight);
+  line-height: var(--large-line-height);
+}
+
+.content-card {
+  display: flex;
+  grid-template-rows: min-content auto;
+  grid-column: 1 / 4;
+  gap: 10px;
+}
+
+.accent-bg {
+  grid-column: 1 / 4;
+  background-color: var(--accent-color);
+  color: var(--header3-color);
+  font-weight: var(--bold-font-weight);
+  line-height: var(--large-line-height);
+}
+
+.text__link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.text__link:focus-visible {
+  outline: none;
+}
+
+.gallery-section {
+  grid-column: 1 / 4;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: column;
+  gap: 10px;
+}
+
+.gallery-grid img {
+  grid-column: 1 / 4;
+  width: 100%;
+  height: 100%;
+}
+
