--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 .page {
   font-family: var(--font-family);
   background-color: var(--bg-color);
+  background-attachment: fixed;
 }
 
 .header {
@@ -46,11 +47,10 @@
   align-self: flex-start;
   grid-template-columns: repeat(2, auto);
   justify-self: end;
-  justify-self: end;
   position: absolute;
-  visibility: var(--is-light); 
+  visibility: var(--is-light);
   gap: 10px;
-  block-size: 25px; 
+  block-size: 25px;
   color: var(--accent-color);
   font-size: var(--regular-font-size);
   text-transform: uppercase;
@@ -186,4 +186,157 @@
   text-shadow: 2px 2px 0 var(--accent-color);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: var(--title-line-height);
+}
+
+@media (min-width: 768px){
+  .header {
+    padding: 20px;
+  }
+
+  .header__title {
+    position: relative;
+    margin-inline-start: -20px;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__text {
+    grid-column: 2 / 3;
+  }
+
+  .main {
+    margin-block: 60px;
+    padding-inline: 20px;
+    row-gap: 80px;
+  }
+
+  .content-section {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .section-title {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+  }
+
+  .content-card {
+    grid-column: 2 / 3;
+  }
+
+  .content-section:nth-child(2) .content-card{
+    grid-column: 1 / 4;
+  }
+
+  .content-section > .accent-bg{
+    grid-column: 2 / 3;
+  }
+
+  .gallery-section {
+    gap: 20px;
+  }
+
+  .gallery-grid img {
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .gallery-grid img:nth-child(2) {
+    grid-column: 1 / 3;
+  }
+
+  .gallery-grid img:nth-child(3) {
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+  }
+
+  .gallery-grid img:nth-child(4) {
+    grid-column: 1 / 2;
+    grid-row: 3 / 5;
+  }
+
+  .gallery-grid img:nth-child(5) {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+
+  .gallery-grid img:nth-child(6) {
+    grid-column: 2 / 4;
+    grid-row: 4 / 5;
+  }
+
+  .footer {
+    padding: 20px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .text-link:hover {
+    border-bottom: 1px solid var(--text-color);
+  }
+
+  .text-link:focus {
+    outline: none;
+  }
+
+  .text-link:focus-visible {
+    outline: 1px solid var(--text-color);
+    outline-offset: -1px;
+  }
+
+  .header__theme-menu {
+    align-self: start;
+    justify-self: center;
+  }
+
+  .header__theme-menu-list {
+    grid-auto-flow: column;
+  }
+
+  .header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
+    border: 1px solid var(--accent-color-opacity);
+  }
+
+  .header__theme-menu-button:focus {
+    outline: none;
+  }
+
+  .header__theme-menu-button:focus-visible {
+    border: none;
+    outline: none;
+    border-bottom: 1px solid var(--decoration-color);
+  }
+
+  .header__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .content-section {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .content-card {
+    grid-column: 2 / 4;
+  }
+
+  .content-section:nth-child(2) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, auto);
+
+  }
+
+  .content-section:nth-child(2) .section-title {
+    grid-row: span 1;
+  }
+
+  .content-section:nth-child(2) .content-card{
+    grid-row: 2 / 3 ;
+    grid-column: span 1;
+  }
+
+  .content-section > .accent-bg{
+    grid-column: 2 / 4;
+  }
+
+  .footer__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
 }
