--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,20 +1,21 @@
 :root {
-  --bg-image: url("../images/cover-image-dark.png");
-  --accent-color: #ff0070;
-  --accent-color-opacity: #ff007066;
-  --text-color: #f1b2ce;
-  --decoration-color: var(--accent-color);
-  --bg-color: #000028;
-  --header1-color: #db00ff;
-  --header2-color: var(--accent-color);
-  --header3-color: var(--background-color);
-  --font-family: 'IBM Plex mono', monospace;
-  --main-font-size: 18px;
-  --small-line-height: 82.5%;
-  --main-line-height: 100%;
-  --large-line-height: 130%;
-  --bold-font-weight: 800;
-  --main-font-weight: 400;
-  --font-style: normal;
-  --is-light: visible;
+  --color-bg: #000028;
+  --color-accent: #FF0070;
+  --color-text: #F1B2CE;
+  --color-button: #FF0070;
+  --color-button-hover: rgba(255, 0, 112, 0.40);
+  --color-subtitle: #FF0070;
+  --color-corner: #FF0070;
+  --color-rec: #FF0070;
+  --color-title-bg: #FF0070;
+  --color-heading: #000028;
+  --color-header: #db00ff;
+  --color-footer: #db00ff;
+  --color-link-underline: #F1B2CE;
+  --color-shadow: #ff0070;
+  --font-family-main: 'IBM Plex Mono', monospace;
+  --font-size-main: 18px;
+  --line-height-main: 23.4px;
+  --space-sm: 12px;
+  --space-md: 23px;
 }
