--- a/styles/style.css
+++ b/styles/style.css
@@ -1,342 +1,441 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  font-family: var(--font-family);
-  background-color: var(--bg-color);
+  background-color: var(--color-bg);
   background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.rec {
+  text-transform: uppercase;
+  position: absolute;
+  inset-block-start: 14px;
+  inset-inline-end: 19px;
+  color: var(--color-rec);
+  text-align: center;
+  font-family: var(--font-family-main);
+  font-size: var(--font-size-main);
+  font-style: normal;
+  font-weight: 400;
+  line-height: var(--font-size-main);
+}
+
+button {
+  cursor: pointer;
+}
+
+.rec::after {
+  content: "";
+  display: inline-block;
+  fill: var(--color-rec);
+  box-shadow: 0 0 4px 2px var(--color-rec);
+  margin-inline-start: 10px;
+  width: 9px;
+  height: 9px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 50%;
+  background-color: var(--color-rec);
+  margin-block-end: 1px;
 }
 
 .header {
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
-  grid-template-columns: repeat(2, 1fr);
-  grid-auto-flow: column;
   align-items: center;
+  justify-items: end;
+  padding: 10px;
   height: 100vh;
-  padding: 13px;
-  background-image: var(--bg-image);
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+  min-height: 668px;
 }
 
 .decorated-zone::before {
   content: "";
   position: absolute;
-  align-self: flex-start;
-  justify-self: end;
-  inline-size: 25px;
-  block-size: 25px;
-  border-block-start: 1px solid var(--decoration-color);
-  border-inline-end: 1px solid var(--decoration-color);
+  width: 25px;
+  height: 25px;
+  inset-block-start: 10px;
+  inset-inline-end: 10px;
+  border-block-start: 1px solid var(--color-corner);
+  border-inline-end: 1px solid var(--color-corner);
 }
 
 .decorated-zone::after {
   content: "";
   position: absolute;
-  justify-self: start;
-  align-self: flex-end;
-  inline-size: 25px;
-  block-size: 25px;
-  border-block-start: 1px solid var(--button-color);
-  border-inline-end: 1px solid var(--button-color);
-}
-
-.rec {
-  display: grid;
-  align-self: flex-start;
-  grid-template-columns: repeat(2, auto);
-  justify-self: end;
-  position: absolute;
-  visibility: var(--is-light);
-  gap: 10px;
-  block-size: 25px;
-  color: var(--accent-color);
-  font-size: var(--regular-font-size);
-  text-transform: uppercase;
-  line-height: 25px;
-}
-
-.rec::after {
-  content: "";
-  align-self: center;
-  inline-size: 9px;
-  block-size: 9px;
-  margin-inline-end: 9px;
-  background-color: var(--accent-color);
-  border-radius: 50%;
-  filter: drop-shadow(0px 0px 4px var(--accent-color));
-}
-
-.header__theme-menu {
-  justify-self: end;
-  grid-column: 1 / 3;
+  width: 25px;
+  height: 25px;
+  inset-block-end: 10px;
+  inset-inline-start: 10px;
+  border-block-end: 1px solid var(--color-corner);
+  border-inline-start: 1px solid var(--color-corner);
 }
 
 .header__theme-menu-list {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  list-style-type: none;
   gap: 13px;
 }
 
+.header__theme-menu-item:hover {
+  outline: 1px solid var(--color-button-hover);
+}
+
 .header__theme-menu-button {
-  position: relative;
-  display: block;
-  border: 1px solid transparent;
-  padding: 2px 13px 4px;
-  background-color: transparent;
-  cursor: pointer;
-  appearance: none;
-  line-height: 1;
-  color: var(--nav-color);
+  background: none;
+  border: none;
+  color: var(--color-button);
+  font-family: var(--font-family-main);
+  font-size: var(--font-size-main);
+  font-style: normal;
+  font-weight: 400;
+  line-height: var(--font-size-main);
   text-transform: lowercase;
+  padding: 2px 13px 4px;
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--decoration-color);
-  pointer-events: none;
+  outline: 1px solid var(--color-button);
+  pointer-events: none; 
 }
 
-.header__title {
-  grid-column: 1 / 3;
-  justify-self: start;
-  color: var(--header1-color);
-  text-shadow: 4px 4px 0 var(--accent-color);
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  line-height: var(--small-line-height);
-}
-
-.header__description {
-  grid-column: 1 / 3;
-  justify-content: end;
-  display: inline-block;
-}
-
-.main {
-  margin-block: 40px;
-  padding-inline: 10px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-flow: column;
-  row-gap: 50px;
-}
-
-.content-section {
-  display: grid;
-  grid-column: 1 / 4;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
-}
-
-.section-title {
-  grid-column: 1 / 4;
-  color: var(--header2-color);
-  font-size: var(--main-font-size);
-  font-weight: var(--bold-font-weight);
-  line-height: var(--large-line-height);
-}
-
-.content-card {
-  display: flex;
-  grid-template-rows: min-content auto;
-  grid-column: 1 / 4;
-  gap: 10px;
-}
-
-.accent-bg {
-  grid-column: 1 / 4;
-  background-color: var(--accent-color);
-  color: var(--header3-color);
-  font-weight: var(--bold-font-weight);
-  line-height: var(--large-line-height);
-}
-
-.text__link {
-  text-decoration: none;
-  text-shadow: 2px 2px 0 var(--accent-color);
-}
-
-.text__link:focus-visible {
+.header__theme-menu-button:focus {
   outline: none;
 }
 
-.gallery-section {
-  grid-column: 1 / 4;
+.header__theme-menu-button:focus-visible {
+  box-shadow: 0 1px 0 var(--color-button);
+}
+
+.header__topic-name {
+  color: var(--color-header);
+  text-shadow: 4px 4px 0px var(--color-shadow);
+  font-family: var(--font-family-main);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 82.5%;
+}
+
+.header__topic-description {
+  color: var(--color-heading);
+  font-family: var(--font-family-main);
+  font-size: var(--font-size-main);
+  font-style: normal;
+  font-weight: 700;
+  line-height: var(--line-height-main);
+  background-color: var(--color-title-bg);
+}
+
+main {
+  padding: 0 10px;
+}
+
+.section-reasons {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-flow: column;
+}
+
+.section-title {
+  color: var(--color-subtitle);
+  font-family: var(--font-family-main);
+  font-size: var(--font-size-main);
+  font-style: normal;
+  font-weight: 700;
+  line-height: var(--line-height-main);
+  margin-block-start: 41px;
+  margin-block-end: 20px;
+  border-radius: 6px;
+}
+
+article {
+  margin-block-end: 21px;
+}
+
+article:last-of-type {
+  margin-block-end: 0;
+}
+
+.title-spaced {
+  padding-top: var(--space-sm);
+}
+
+.section-subtitle {
+  color: var(--color-heading);
+  font-family: var(--font-family-main);
+  font-size: var(--font-size-main);
+  font-style: normal;
+  font-weight: 700;
+  line-height: var(--line-height-main);
+  background-color: var(--color-title-bg);
+  margin: 0 0 10px;
+  border-radius: 6px;
+}
+
+.paragraph {
+  color: var(--color-text);
+  font-family: var(--font-family-main);
+  font-size: var(--font-size-main);
+  font-style: normal;
+  font-weight: 400;
+  line-height: var(--line-height-main);
+  margin-block-end: 20px;
+}
+
+.paragraph:last-of-type {
+  margin-block-end: 0;
+}
+
+.link-accent {
+  text-decoration: none;
+  text-shadow: 2px 2px 0px var(--color-accent);
+  cursor: pointer;
+  transition: border-color 0.3s ease;
+}
+
+.link-accent:hover {
+  border-bottom: 1px solid var(--color-link-underline);
+}
+
+.link-accent:focus {
+  outline: none;
+}
+
+.link-accent:focus-visible {
+  outline: 1px solid var(--color-link-underline);
+}
+
+.section-factors {
+  display: grid;
+}
+
+.section-tips {
+  display: grid;
+}
+
+.tips-title {
+  padding-top: var(--space-sm);
+}
+
+.tips-intro {
+  color: var(--color-heading);
+  background-color: var(--color-title-bg);
+  font-family: var(--font-family-main);
+  font-size: var(--font-size-main);
+  font-style: normal;
+  font-weight: 700;
+  line-height: var(--line-height-main);
+  margin-block-end: 20px;
+  border-radius: 6px;
+}
+
+.tip-heading {
+  font-weight: 400;
+  margin-block-end: 12px;
+}
+
+.gallery {
+  display: flex;
+  flex-direction: column;
   gap: 10px;
 }
 
-.gallery-grid img {
-  grid-column: 1 / 4;
-  width: 100%;
-  height: 100%;
+.gallery__title {
+  color: var(--color-heading);
+  background-color: var(--color-title-bg);
+  font-family: var(--font-family-main);
+  font-size: var(--font-size-main);
+  font-style: normal;
+  font-weight: 700;
+  line-height: var(--line-height-main);
+  margin-block-start: 50px;
+  border-radius: 6px;
 }
 
-.footer {
-  padding: 10px;
-  block-size: 100vh;
+.gallery__item {
+  inline-size: 100%;
+  gap: 10px;
+  object-position: center;
+}
+
+.site-footer {
   display: grid;
+  position: relative;
+  place-items: center;
+  margin-block-start: 40px;
+  height: 100vh;
+  min-height: 668px;
 }
 
-.footer__title {
+.site-footer__title {
+  display: flex;
+  justify-content: center;
   justify-self: center;
   align-self: center;
-  color: var(--header1-color);
-  text-shadow: 2px 2px 0 var(--accent-color);
+  position: relative;
+  color: var(--color-footer);
+  text-shadow: 4px 4px 0px var(--color-shadow);
+  font-family: var(--font-family-main);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  line-height: var(--title-line-height);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 82.5%;
 }
 
-@media (min-width: 768px){
+@media (width >= 768px) {
+
+  .rec {
+    inset-block-start: 24px;
+    inset-inline-end: 29px;
+  }
+
   .header {
-    padding: 20px;
+    padding: 20px 20px 20px 0;
   }
 
-  .header__title {
-    position: relative;
-    margin-inline-start: -20px;
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  .decorated-zone::before {
+    inset-block-start: 20px;
+    inset-inline-end: 20px;
+  }
+  
+  .decorated-zone::after {
+    inset-block-end: 20px;
+    inset-inline-start: 20px;
   }
 
-  .header__text {
-    grid-column: 2 / 3;
+  .header__topic-name {
+    justify-self: start;
   }
 
-  .main {
-    margin-block: 60px;
-    padding-inline: 20px;
-    row-gap: 80px;
+  .header__grid-template {
+    display: grid;
+    grid-template-columns: 49%;
+    justify-content: end;
   }
 
-  .content-section {
+  main {
+    padding: 0 20px;
+  }
+
+  .section-reasons {
     grid-template-columns: 1fr 2fr;
+    column-gap: 20px;
+    margin: 60px 0 20px;
   }
 
   .section-title {
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
+    margin-block-start: 0;
   }
 
-  .content-card {
-    grid-column: 2 / 3;
+  .title-spaced {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 20px;
+    margin-block-start: 63px;
+    padding-top: 0;
   }
 
-  .content-section:nth-child(2) .content-card{
-    grid-column: 1 / 4;
+  .section-tips {
+    margin-block-start: 84px;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 20px;
   }
 
-  .content-section > .accent-bg{
-    grid-column: 2 / 3;
+  .tips-title {
+    padding: 0;
   }
-
-  .gallery-section {
+  
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+    max-width: 100%;
+    margin-block-start: 77px;
   }
 
-  .gallery-grid img {
+  .gallery__title {
+    margin-block-end: 0;
+    margin-block-start: 0;
+    grid-column: span 3;
+  }
+
+  .gallery__item {
+    block-size: 100%;
     object-fit: cover;
-    object-position: center;
   }
 
-  .gallery-grid img:nth-child(2) {
-    grid-column: 1 / 3;
+  .gallery__item--sunset {
+    grid-column: span 2;
   }
 
-  .gallery-grid img:nth-child(3) {
-    grid-column: 3 / 4;
-    grid-row: 2 / 4;
+  .gallery__item--ice-cream {
+    grid-row: span 2;
+  }
+  .gallery__item--tape {
+    grid-row: span 2;
   }
 
-  .gallery-grid img:nth-child(4) {
-    grid-column: 1 / 2;
-    grid-row: 3 / 5;
+  .gallery__item--street {
+    grid-column: span 2;
+  }
+  .gallery__item--books {
+    grid-column: 2;
+    grid-row: 3;
   }
 
-  .gallery-grid img:nth-child(5) {
-    grid-column: 2 / 3;
-    grid-row: 3 / 4;
-  }
-
-  .gallery-grid img:nth-child(6) {
-    grid-column: 2 / 4;
-    grid-row: 4 / 5;
-  }
-
-  .footer {
-    padding: 20px;
+  .site-footer {
+    margin-block-start: 60px;
   }
 }
 
-@media (min-width: 1024px) {
-  .text-link:hover {
-    border-bottom: 1px solid var(--text-color);
-  }
-
-  .text-link:focus {
-    outline: none;
-  }
-
-  .text-link:focus-visible {
-    outline: 1px solid var(--text-color);
-    outline-offset: -1px;
-  }
+@media (width >= 1024px) {
 
   .header__theme-menu {
-    align-self: start;
-    justify-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
   }
 
   .header__theme-menu-list {
-    grid-auto-flow: column;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0;
+    padding-inline-start: 20px;
+    gap: 10px;
   }
 
-  .header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
-    border: 1px solid var(--accent-color-opacity);
-  }
-
-  .header__theme-menu-button:focus {
-    outline: none;
-  }
-
-  .header__theme-menu-button:focus-visible {
-    border: none;
-    outline: none;
-    border-bottom: 1px solid var(--decoration-color);
-  }
-
-  .header__title {
+  .header__topic-name {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
-  .content-section {
-    grid-template-columns: repeat(3, 1fr);
+  .header__grid-template {
+    grid-template-columns: 64%;
   }
 
-  .content-card {
-    grid-column: 2 / 4;
+  .section-reasons {
+    column-gap: 10px;
+    margin: 60px 0 18px;
   }
 
-  .content-section:nth-child(2) {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, auto);
-
+  .section-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
   }
 
-  .content-section:nth-child(2) .section-title {
-    grid-row: span 1;
+  .section-tips {
+    margin-block-start: 83px;
+    column-gap: 10px;
   }
 
-  .content-section:nth-child(2) .content-card{
-    grid-row: 2 / 3 ;
-    grid-column: span 1;
+  .gallery {
+    margin-block-start: 76px;
   }
 
-  .content-section > .accent-bg{
-    grid-column: 2 / 4;
-  }
-
-  .footer__title {
+  .site-footer__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
